--- a/bloglist-frontend/src/index.css
+++ b/bloglist-frontend/src/index.css
@@ -1,27 +1,5 @@
-div.error,
-div.success {
-  background: lightgrey;
-  font-size: 20px;
-  border-style: solid;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-div.error {
-  color: red;
-  border-color: red;
-}
-
-div.success {
-  color: green;
-  border-color: green;
-}
-
-div.blog-post {
-  border-style: solid;
-  border-radius: 5px;
-  padding: 10px 5px;
-  margin-bottom: 10px;
-  border-width: 1px;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
